# facdoc

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  cleanautot.sh  configure  configure.ac  configure.scan  ex.fcd  ex1.fcd  ex2.fcd  files.txt  host.info  host_configure_param.txt
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: fcd-1.1.html  fcd-1.1.md  fcd_specification-1.0.txt  flex.aux  flex.cp  flex.cps  flex.texi  flex.toc
doc/templates/: doc.txt  style.css
etc/vim/: .fcd.vim.swp  fcd.vim
etc/vscodium/fcd/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
etc/vscodium/fcd/syntaxes/: fcd.tmLanguage.json  fcd.tmLanguage.json.old
src/: config.h.in~  display_error.h  example.fcd  example1.fcd  example3.fcd  facdoc.c  facdoc.h  fcd_blocks_patterns.c  fcd_blocks_patterns.h  fcd_check_syntax.c  fcd_check_syntax.h  fcd_serializer.c  fcd_syntax.h  main.c  main.h  new.fcd  t  template.h  util.c  util.h
src/examples/: example2.fcd  example3.fcd  example4.fcd
src/fcd/: errors.h  fcd.c  fcd.h  lexer.l  parser.y  print_fcd_st.c  print_fcd_st.h
src/html_compiler/: html_compiler.h  html_templates.h
src/templates/: index.html  link_nav.html  style.css
src/translators/: translators.c  translators.h
src/translators/html/: css.h  html.h  translator.c  translator.h
src/util/: astrcat.c  astrncat.c  base64.c  bstrlen.c  chrmult.c  dicount.c  fcd_asprintf.c  fcd_asprintf.h  fferror.c  fgetsize.c  mallocn.c  maxofa.c  sfree.c  size_t2str.c  stralloc.c  strarr_data_size.c  strarrcat.c  strrealloc.c  uint2str.c  util.h  wildcard.c
test/: time  time.c  tree  tree.c
test/struct_polimorphism/: Makefile  main_st
test/struct_polimorphism/src/: fcd_structs.h  main.c  print_fcd_st.c  util.c  util.h
windows/: main.c  t.c
